[package]
name = "splendor-clone"
version = "0.1.0"
authors = ["ykonomi"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
failure = "0.1.2"
lazy_static = "1.1.0"
ndarray = "0.12.1"
rand = "0.6"

[build-dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
failure = "0.1.2"
lazy_static = "1.1.0"